--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework 7</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./style_about.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <main class="wrapper">
