--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
             <div class="about__btn-delivery">
                 <a href="#" class="btn btn--sm">ПЕРЕЙТИ К ДОСТАВКЕ</a>
             </div>
+            <div class="box-head">
+                <h2 class="box-head__title">Меню</h2>
+                <p class="box-head__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium netus urna hendrerit convallis aliquam consequat turpis.</p>
+            </div>
             
         </div>
     </section>
