--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework 7</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./old_css/style_about.css">
 </head>
 <body>
     <main class="wrapper">
@@ -105,7 +106,54 @@
         </div>
         
     </main>
-
+    <section class="about">
+        <div class="container">
+            <div class="box-head">
+                <h2 class="box-head__title">Попробуйте на вкус</h2>
+                <p class="box-head__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium netus urna hendrerit convallis aliquam consequat turpis.</p>
+            </div>
+            <div class="about__row">
+                <div class="about__col">
+                    <div class="about__card">
+                        <div class="about__img-box">
+                            <img class="about__img" src="./img/about/item3.png" alt="item3"/>
+                        </div>
+                        <div class="about__body-box">
+                            <p class="about__body-text">Здесь будет какой то текст, возможно назване блюда</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__col">
+                    <div class="about__card">
+                        <div class="about__img-box">
+                            <img class="about__img" src="./img/about/item2.png" alt="item2"/>
+                        </div>
+                        <div class="about__body-box">
+                            <p class="about__body-text">Здесь будет какой то текст, возможно назване блюда</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__col">
+                    <div class="about__card">
+                        <div class="about__img-box">
+                            <img class="about__img" src="./img/about/item3.png" alt="item3"/>
+                        </div>
+                        <div class="about__body-box">
+                            <p class="about__body-text">Здесь будет какой то текст, возможно назване блюда</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about__btn-delivery">
+                <a href="#" class="btn btn--sm">ПЕРЕЙТИ К ДОСТАВКЕ</a>
+            </div>
+            <div class="box-head">
+                <h2 class="box-head__title">Меню</h2>
+                <p class="box-head__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium netus urna hendrerit convallis aliquam consequat turpis.</p>
+            </div>
+            
+        </div>
+    </section>
 
     <script src="./script.js"></script>
 </body>
