--- a/index.html
+++ b/index.html
@@ -236,9 +236,33 @@
                 </div>
             </div>
         </section>
-    
+
+        <section class="footer">
+            <div class="container">
+                <div class="footer__wrap">
+                    <div class="footer__main-row">
+                        <div class="footer__main-col">
+                            <img src="./img/logo.svg" alt="logo" class="footer__logo-img">
+                        </div>
+                        <div class="footer__main-col">
+                            <p>+38 (050) 456-99-98</p>
+                            <img src="./img/footer_img/social/telegram 1.png" alt="telegram" />
+                            <img src="./img/footer_img/social/viber-mob 1.png" alt="viber" />
+                            <img src="./img/footer_img/social/whatsapp-mob 1@2x.png" alt="whatsapp" />
+                        </div>
+                        <div class="footer__main-col">
+                            <p>г. Киев, район стадиона Динамо</p>
+                        </div>
+                        <div class="footer__main-col">
+                            <div class="footer__email">
+                                <a href="Email: mail@mal.ru">Email: mail@mal.ru</a>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-   
    
     <script src="./script.js"></script>
 </body>
