--- a/index.html
+++ b/index.html
@@ -245,17 +245,17 @@
                             <img src="./img/logo.svg" alt="logo" class="footer__logo-img">
                         </div>
                         <div class="footer__main-col">
-                            <p>+38 (050) 456-99-98</p>
-                            <img src="./img/footer_img/social/telegram 1.png" alt="telegram" />
-                            <img src="./img/footer_img/social/viber-mob 1.png" alt="viber" />
-                            <img src="./img/footer_img/social/whatsapp-mob 1@2x.png" alt="whatsapp" />
+                            <p class="footer__text-tel">+38 (050) 456-99-98</p>
+                            <img src="./img/footer_img/social/telegram 1.png" class="footer__social-icon" alt="telegram" />
+                            <img src="./img/footer_img/social/viber-mob 1.png" class="footer__social-icon" alt="viber" />
+                            <img src="./img/footer_img/social/whatsapp-mob 1@2x.png" class="footer__social-icon" alt="whatsapp" />
                         </div>
                         <div class="footer__main-col">
-                            <p>г. Киев, район стадиона Динамо</p>
+                            <p class="footer__text-city">г. Киев, район стадиона Динамо</p>
                         </div>
                         <div class="footer__main-col">
-                            <div class="footer__email">
-                                <a href="Email: mail@mal.ru">Email: mail@mal.ru</a>
+                            <div class="footer__text-email">
+                                <a href="mailto: mail@mal.ru">Email: mail@mal.ru</a>
                             </div>  
                         </div>
                     </div>
