--- a/index.html
+++ b/index.html
@@ -259,6 +259,17 @@
                             </div>  
                         </div>
                     </div>
+                    <div class="footer__copyright">
+                        <div class="footer__copyright-row">
+                            <div class="footer__copyright-col">
+                                <p class="footer__copyright-item">Политика конфиденциальности</p>
+                                <p class="footer__copyright-item">Пользовательское соглашение</p>
+                            </div>
+                            <div class="footer__copyright-col">
+                                <p class="footer__copyright-item">Динамо. Грузинское бистро. Все права защищены, 2021</p>
+                            </div>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </section>
