--- a/index.html
+++ b/index.html
@@ -145,13 +145,64 @@
                 </div>
                 <div class="about__btn-delivery">
                     <a href="#" class="btn btn--sm">ПЕРЕЙТИ К ДОСТАВКЕ</a>
-                </div>
+                </div>                
+            </div>
+        </section>
+        <section class="menu">
+            <div class="container">
                 <div class="box-head">
                     <h2 class="box-head__title">Меню</h2>
                     <p class="box-head__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium netus urna hendrerit convallis aliquam consequat turpis.</p>
                 </div>
-                
+                <div class="menu__wrap">
+                    <div class="menu__row">
+                        <div class="menu__col">
+                            <div class="menu__card">
+                                <div class="menu__img-wrap">
+                                    <img src="./img/footer_img/gal1.jpg" class="menu__img--item" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu__col">
+                            <div class="menu__card">
+                                <div class="menu__img-wrap">
+                                    <img src="./img/footer_img/gal3.jpg" class="menu__img--item" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu__col">
+                            <div class="menu__card">
+                                <div class="menu__img-wrap">
+                                    <img src="./img/footer_img/gal4.jpg" class="menu__img--item" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu__col">
+                            <div class="menu__card">
+                                <div class="menu__img-wrap">
+                                    <img src="./img/footer_img/gal7.jpg" class="menu__img--item" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu__col">
+                            <div class="menu__card">
+                                <div class="menu__img-wrap">
+                                    <img src="./img/footer_img/gal2.jpg" class="menu__img--item" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu__col">
+                            <div class="menu__card">
+                                <div class="menu__img-wrap">
+                                    <img src="./img/footer_img/gal2.jpg" class="menu__img--item" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            
+
         </section>
 
         <section class="delivery">
