--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <h2 class="box-head__title">Меню</h2>
                     <p class="box-head__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium netus urna hendrerit convallis aliquam consequat turpis.</p>
                 </div>
-                <div class="menu__wrap">
+                <!-- <div class="menu__wrap">
                     <div class="menu__row">
                         <div class="menu__col">
                             <div class="menu__card">
@@ -199,13 +199,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             
 
         </section>
 
-        <section class="delivery">
+        <!-- <section class="delivery">
             <div class="container">
                 <div class="box-head">
                     <h2 class="box-head__title">Удобные способы доставки</h2>
@@ -323,7 +323,7 @@
                     </div>  
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
    
     <script src="./script.js"></script>
