--- a/index.html
+++ b/index.html
@@ -154,13 +154,14 @@
                     <h2 class="box-head__title">Меню</h2>
                     <p class="box-head__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium netus urna hendrerit convallis aliquam consequat turpis.</p>
                 </div>
-                <!-- <div class="menu__wrap">
+                <div class="menu__wrap">
                     <div class="menu__row">
                         <div class="menu__col">
                             <div class="menu__card">
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal1.jpg" class="menu__img--item" alt="">
                                 </div>
+                                <p class="menu__img-text">123213213</p>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -168,6 +169,7 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal3.jpg" class="menu__img--item" alt="">
                                 </div>
+                                <p class="menu__img-text">123213213</p>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -175,6 +177,7 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal4.jpg" class="menu__img--item" alt="">
                                 </div>
+                                <p class="menu__img-text">123213213</p>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -189,6 +192,7 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal2.jpg" class="menu__img--item" alt="">
                                 </div>
+                                <p class="menu__img-text">123213213</p>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -196,16 +200,17 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal2.jpg" class="menu__img--item" alt="">
                                 </div>
+                                <p class="menu__img-text">123213213</p>
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             
 
         </section>
 
-        <!-- <section class="delivery">
+        <section class="delivery">
             <div class="container">
                 <div class="box-head">
                     <h2 class="box-head__title">Удобные способы доставки</h2>
@@ -323,7 +328,7 @@
                     </div>  
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
    
     <script src="./script.js"></script>
