--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal7.jpg" class="menu__img--item" alt="">
                                 </div>
+                                <p class="menu__img-text">123213213</p>
                             </div>
                         </div>
                         <div class="menu__col">
