--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal1.jpg" class="menu__img--item" alt="">
                                 </div>
-                                <p class="menu__img-text">123213213</p>
+                                <p class="menu__img-text">Суп</p>
+                                <div class="menu__button">
+                                    <a href="#" class="btn btn--sm">Меню</a>
+                                </div>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -169,7 +172,10 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal3.jpg" class="menu__img--item" alt="">
                                 </div>
-                                <p class="menu__img-text">123213213</p>
+                                <p class="menu__img-text">Суп</p>
+                                <div class="menu__button">
+                                    <a href="#" class="btn btn--sm">Меню</a>
+                                </div>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -177,7 +183,10 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal4.jpg" class="menu__img--item" alt="">
                                 </div>
-                                <p class="menu__img-text">123213213</p>
+                                <p class="menu__img-text">Суп</p>
+                                <div class="menu__button">
+                                    <a href="#" class="btn btn--sm">Меню</a>
+                                </div>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -185,7 +194,10 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal7.jpg" class="menu__img--item" alt="">
                                 </div>
-                                <p class="menu__img-text">123213213</p>
+                                <p class="menu__img-text">Блюда на мангале</p>
+                                <div class="menu__button">
+                                    <a href="#" class="btn btn--sm">Меню</a>
+                                </div>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -193,7 +205,10 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal2.jpg" class="menu__img--item" alt="">
                                 </div>
-                                <p class="menu__img-text">123213213</p>
+                                <p class="menu__img-text">Горячие блюда</p>
+                                <div class="menu__button">
+                                    <a href="#" class="btn btn--sm">Меню</a>
+                                </div>
                             </div>
                         </div>
                         <div class="menu__col">
@@ -201,7 +216,10 @@
                                 <div class="menu__img-wrap">
                                     <img src="./img/footer_img/gal2.jpg" class="menu__img--item" alt="">
                                 </div>
-                                <p class="menu__img-text">123213213</p>
+                                <p class="menu__img-text">Горячие блюда</p>
+                                <div class="menu__button">
+                                    <a href="#" class="btn btn--sm">Меню</a>
+                                </div>
                             </div>
                         </div>
                     </div>
