--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </ul>
                         </nav>
                         <div class="header__social">
-                            <div class="header__social-img">
+                            <div class="header__tel"> <!--header__social-img-->
                                 <a href="tel:+38 (050)1234567" class="header__social-svg-link header__social-svg-link-tel">
                                     <svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_13_49)">
