--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework 7</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./old_css/about.css">
 </head>
 <body>
     <main class="wrapper">
@@ -153,7 +154,7 @@
                     <h2 class="box-head__title">Меню</h2>
                     <p class="box-head__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium netus urna hendrerit convallis aliquam consequat turpis.</p>
                 </div>
-                <!-- <div class="menu__wrap">
+                <div class="menu__wrap">
                     <div class="menu__row">
                         <div class="menu__col">
                             <div class="menu__card">
@@ -198,13 +199,13 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             
 
         </section>
 
-        <!-- <section class="delivery">
+        <section class="delivery">
             <div class="container">
                 <div class="box-head">
                     <h2 class="box-head__title">Удобные способы доставки</h2>
@@ -295,10 +296,12 @@
                             <img src="./img/logo.svg" alt="logo" class="footer__logo-img">
                         </div>
                         <div class="footer__main-col">
-                            <p class="footer__text-tel">+38 (050) 456-99-98</p>
-                            <img src="./img/footer_img/social/telegram 1.png" class="footer__social-icon" alt="telegram" />
-                            <img src="./img/footer_img/social/viber-mob 1.png" class="footer__social-icon" alt="viber" />
-                            <img src="./img/footer_img/social/whatsapp-mob 1@2x.png" class="footer__social-icon" alt="whatsapp" />
+                            <div class="social">
+                                <p class="footer__text-tel">+38 (050) 456-99-98</p>
+                                <img src="./img/footer_img/social/telegram 1.png" class="footer__social-icon" alt="telegram" />
+                                <img src="./img/footer_img/social/viber-mob 1.png" class="footer__social-icon" alt="viber" />
+                                <img src="./img/footer_img/social/whatsapp-mob 1@2x.png" class="footer__social-icon" alt="whatsapp" />
+                            </div>
                         </div>
                         <div class="footer__main-col">
                             <p class="footer__text-city">г. Киев, район стадиона Динамо</p>
@@ -322,7 +325,7 @@
                     </div>  
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
    
     <script src="./script.js"></script>
