--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
                             <img src="./img/logo.svg" alt="logo" class="footer__logo-img">
                         </div>
                         <div class="footer__main-col">
-                            <div class="social">
                                 <p class="footer__text-tel">+38 (050) 456-99-98</p>
-                                <img src="./img/footer_img/social/telegram 1.png" class="footer__social-icon" alt="telegram" />
-                                <img src="./img/footer_img/social/viber-mob 1.png" class="footer__social-icon" alt="viber" />
-                                <img src="./img/footer_img/social/whatsapp-mob 1@2x.png" class="footer__social-icon" alt="whatsapp" />
-                            </div>
+                                <div class="socialitem">
+                                    <img src="./img/footer_img/social/telegram 1.png" class="footer__social-icon" alt="telegram" />
+                                    <img src="./img/footer_img/social/viber-mob 1.png" class="footer__social-icon" alt="viber" />
+                                    <img src="./img/footer_img/social/whatsapp-mob 1@2x.png" class="footer__social-icon" alt="whatsapp" />
+                                </div>
                         </div>
                         <div class="footer__main-col">
                             <p class="footer__text-city">г. Киев, район стадиона Динамо</p>
